manifests/system/pocket-id/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
