manifests/system/pocket-id/base/cloudflare-tunnel.yaml
apiVersion: networking.cfargotunnel.com/v1alpha1
kind: TunnelBinding
metadata:
  name: pocket-id
  namespace: pocket-id
subjects:
- kind: Service
  name: pocket-id-service
  spec:
    fqdn: auth.laskonet.com
tunnelRef:
  kind: ClusterTunnel
  name: k8s-home
