manifests/system/pocket-id/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocket-id-temp
  namespace: pocket-id
spec:
  parentRefs:
  - name: tls
    namespace: pocket-id
    sectionName: https
  hostnames:
  - "auth.laskonet.com"
  rules:
  - backendRefs:
    - name: pocket-id-service
      namespace: pocket-id
      kind: Service
      port: 1411
